Fixed sorting on the points page. Fixed dark mode table colors in admin panel. Added back button for main page.

--- a/webfiles/css/admin.css
+++ b/webfiles/css/admin.css
@@ -14,6 +14,8 @@
     --shadow: rgba(0, 0, 0, 0.15);
     --border: #d3d3d3;
     --input-bg: #f5f5f5;
+
+    --table-accent: #dddddd;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,6 +30,8 @@
         --shadow: rgba(255, 255, 255, 0.05);
         --border: rgba(255, 255, 255, 0.1);
         --input-bg: #191919;
+
+        --table-accent: #332929;
     }
 }
 
@@ -83,7 +87,7 @@ th, td {
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: var(--table-accent);
 }
 
 /* Form styles */
